--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,41 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+:root { 
+  --background: #F9F6EE;
+  --foreground: #1b0006;
+  --primary: #80CAC3;
+  --secondary: #4E597A;
+  --accent: #E4CBFF;
+  transition: all 0.66s ease;
 }
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+[data-theme='dark'] {
+  --background: #1b0006;
+  --foreground: #fff7f8;
+  --primary: #d1e30d;
+  --secondary: #340887;
+  --accent: #bc0b63;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto);
+  transition: background-color 0.66s ease, color 0.66s ease;
+}
+
+.canvas-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 0;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
 }
