--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 .canvas-container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -35,7 +35,9 @@ body {
   z-index: 0;
 }
 
+
 .content {
   position: relative;
   z-index: 1;
+  pointer-events: none;
 }
