--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -30,7 +30,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 0;
 }
@@ -39,5 +39,7 @@ body {
 .content {
   position: relative;
   z-index: 1;
-  pointer-events: none;
+  pointer-events: none; /*This is to not block interactivity of 3D Card, 
+                        set auto pointer-events for interactive html elements*/
 }
+
