--- a/src/app/styles/portfolioItem.css
+++ b/src/app/styles/portfolioItem.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    pointer-events: auto;
+    pointer-events: auto; /*This is to allow the user to interact with content*/
 }
 
 .portfolio-item .title{
