--- a/src/app/styles/page.css
+++ b/src/app/styles/page.css
@@ -10,3 +10,12 @@
     align-items: center;
     padding: 2rem;
 }
+
+.second-portfolio-area{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
