--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -27,14 +27,17 @@ body {
 }
 
 .canvas-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 0;
 }
 
+.canvas-container canvas {
+  background-color: transparent !important;
+}
 
 .content {
   position: relative;
