--- a/src/app/styles/portfolioItem.css
+++ b/src/app/styles/portfolioItem.css
@@ -34,6 +34,19 @@
     z-index: -1;
 }
 
+.video-placeholder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent);
+    color: var(--secondary);
+}
+
 .video-indicator {
     position: absolute;
     top: 10px;
